Wed Sep 13 19:41:20 CEST 2006 (acab)
------------------------------------
  * libclamav/mbox.c: checkURLs reprototyped to prepare the merge of the
                      phishing module

Wed Sep 13 17:46:06 CEST 2006 (tk)
----------------------------------
  * freshclam/dns.c: try to handle broken dns servers (such as in SpeedTouch
		     510), the workaround must be enabled during installation
		     Patch from Arnold Metselaar <arnold.metselaar*planet.nl>
  * configure: new --enable-dns-fix switch

Wed Sep 13 00:50:40 CEST 2006 (tk)
----------------------------------
  * shared/cfgparser.c: fix error path leaks, patch from Mark Pizzolato

Wed Sep 13 00:35:57 CEST 2006 (tk)
----------------------------------
  * configure: add -lresolv to CLAMAV_MILTER_LIBS, patch from Stephen Gran

Wed Sep 13 00:03:30 CEST 2006 (acab)
------------------------------------
  * libclamav: Merge of the html normaliser part of the phishing module from
               Torok Edvin <edwintorok*gmail.com>
               Part of the Google Summer of Code program

Tue Sep 12 22:52:14 CEST 2006 (tk)
----------------------------------
  * clamd: apply w32 patches from NJH

Tue Sep 12 21:59:17 CEST 2006 (acab)
------------------------------------
  * libclamav: Merge of the related part of the phishing module from
               Torok Edvin <edwintorok*gmail.com>
	       Part of the Google Summer of Code program

Tue Sep 12 20:42:04 CEST 2006 (acab)
------------------------------------
  * sigtool: Merge of the related part of the phishing module from
             Torok Edvin <edwintorok*gmail.com>
             Part of the Google Summer of Code program
  * libclamav: Initial merge of the phishing module - inactive

Tue Sep 12 01:04:39 CEST 2006 (tk)
----------------------------------
  * clamd, clamdscan: add support for hardware acceleration
  * etc/clamd.conf: add HardwareAcceleration option
  * clamd: add MULTISCAN command (for scanning directories with multiple threads)
